style.css
body {
    background-color: aquamarine;
}

h1 {
    color: coral;
}

p {
    color: coral;
}

#header {
    background-color: aliceblue;
    height: 100px;
    border-radius: 25px;
}

#header img {
    height: 100px;
    width: 345px;
    padding-left: 10px;
}

#header ul {
    float: right;
    padding-right: 100px;
    padding-top: 33px;

}

#header ul li {
    display: inline;
    padding-right: 40px;
}

#header ul a {
    text-decoration: none;
    color: black;
    font-size: 25px;
    font-family: monospace;
    padding: 10px;
}

#section {
    margin: auto;
    background-color: aliceblue;
    width: 600px;
    padding: 0px;
    border: 0px;
}

#section iframe {
    display: block;
    margin: auto;
}

#section img {
    display: block;
    margin: auto;
}
#section h1, p {
padding-left: 25px;
}

#aside {
margin-right: 50px;
padding-left: 50px;
width: 250px;
height: 500px;
    background-color: yellow;
}

#sectionaside {
    display: flex;
    margin: auto;
    width: 800px;
    margin-top: 25px;
}

#aside ul {
    list-style: none;
    padding-left: 0px;
    display: flex;
    flex-direction: row;
}

#aside a {
    text-decoration: none;
    color: black;
}

button.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
}

button.accordion.active, button.accordion:hover {
    background-color: #ddd;
    border-radius: 10px;
}

div.panel {
    padding: 0 18px;
    background-color: white;
    display: none;
}

